# clicked

./: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  pr.md
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: ai-agent-ci.yml  backend-ci.yml  contracts-ci.yml  frontend-ci.yml
apps/ai_agent/: main.py  pyproject.toml
apps/ai_agent/tests/: conftest.py  test_proposals.py  test_search.py  test_transfers.py
apps/backend/: drizzle.config.d.ts  package.json  vitest.config.ts
apps/backend/docs/: e2ee-onboarding.md
apps/backend/drizzle/: 0008_files_uploads.sql  0008_migrate_messages_ciphertext.sql  0008_treasury_multisig_voting.sql  0009_message_edits.sql  0009_push_enabled.sql  0009_push_file_hygiene.sql  0010_device_management.sql
apps/backend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0004_snapshot.json  0008_snapshot.json  _journal.json
apps/backend/src/: app.ts  config.ts  index.ts
apps/backend/src/__tests__/: auth.integration.test.ts  config.test.ts  conversations.cache.test.ts  conversations.routes.test.ts  deviceDelivery.test.ts  devices.bundle.test.ts  devices.prekeys.test.ts  dispatcher.test.ts  eventEnvelope.test.ts  file.messages.test.ts  fileCleanup.test.ts  health.test.ts  keys.test.ts  messageEdit.test.ts  presence.test.ts  (+14 more)
apps/tests/routes/: conversations.test.js
apps/web/: package.json
apps/web/public/: sw.js
contracts/scripts/: deploy_group_treasury.sh
docs/: signal-integration.md
infra/: docker-compose.yml
src/components/ui/: WalletAddress.tsx
(+108 files in other folders)
